Fix for fixed headers on small screens

--- a/assets/style/pages/_terms.scss
+++ b/assets/style/pages/_terms.scss
@@ -1,3 +1,8 @@
+.tag-content-line {
+    margin-bottom: 5em;
+}
+
+
 .common-padding {
     padding-left: 15px;
         padding-right: 15px;
