--- a/assets/style/partials/_page-main.scss
+++ b/assets/style/partials/_page-main.scss
@@ -6,28 +6,24 @@
     margin-right: 1.4em;
 
     h1 {
-        
-        
-        margin-top: 1em;
+        margin-top: 2em;
         font-size: 4rem;
         line-height: 1.1;
         color: var(--theme-color);
         text-transform: capitalize;
     }
 
+
     p {
         font-size: 1.3rem;
         margin-bottom: 1em;
     }
-
 }
 
 .page-main-list {
         padding-left: 15px;
         padding-right: 15px;
         margin-bottom: 10em;
-    
-
     ul{
         display: grid;
         grid-template-columns: repeat(auto-fill,minmax(19rem,1fr));
@@ -41,9 +37,17 @@
 }
 
 
+@media (min-width: $small-screen-end) {
+    .list-page-header {    
+        h1 {
+            margin-top: 1em;
+        }
+    }
+}
+
+
 @media (min-width: $invisible-contentmenu-end) {
-    .page-main-list {
-        
+    .page-main-list {        
         ul{
             display: grid;
             grid-template-columns: repeat(auto-fill,minmax(35rem,1fr));
